--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -13,5 +13,8 @@
             </div>
         </div>
     </div>
+    <div class="footer">
+        <button type="button" data-home-target="button" disabled>Go To Next Page</button>
+    </div>
 </div>
 
