--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -54,9 +54,36 @@ p {
 }
 
 .footer button {
-    font-size: 16px;
+    font-size: 1em;
 }
 
 .image, button {
     cursor: pointer;
+}
+
+@media screen and (width <= 1024px) and (height > 600px) {
+    .content {
+        flex-direction: column;
+        margin-top: 0;
+    }
+
+    .content > div {
+        margin-top: 1em;
+    }
+
+    .content > div > div {
+        width: 80%;
+    }
+
+    p {
+        font-size: .75em;
+    }
+
+    .footer {
+        margin: 1em 0;
+    }
+
+    .footer button {
+        font-size: .75em;
+    }
 }
