Added getDraftPicks action for Home controller

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -14,7 +14,8 @@
         </div>
     </div>
     <div class="footer">
-        <button type="button" data-home-target="button" disabled>Go To Next Page</button>
+        <button type="button" disabled
+            data-home-target="button" data-action="click->home#getDraftPicks">Go To Next Page</button>
     </div>
 </div>
 
