--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -81,3 +81,29 @@ body {
         width: 40%;
     }
 }
+
+@media screen and (width < 1024px) and (height < 600px) {
+    html {
+        overflow: scroll;
+    }
+
+    body { 
+        background: #12A8E1;
+    }
+
+    #header {
+        flex-direction: column;
+        align-items: center;
+        font-size: 1.2em;
+    }
+
+    #header div {
+        padding: 0;
+        border: none;
+        text-align: center;
+    }
+
+    #chargers_logo {
+        width: 40%;
+    }
+}
