--- a/app/views/draft_picks/show.html.erb
+++ b/app/views/draft_picks/show.html.erb
@@ -1,7 +1,7 @@
 <form data-controller="draft_picks" action="">
     <input type="hidden" name="selected-draft-picks-team-1" value="" />
     <input type="hidden" name="selected-draft-picks-team-2" value="" />
-    <div id="home">
+    <div id="draft-picks">
         <div class="content">
             <div>
                 <div>
@@ -20,7 +20,7 @@
         </div>
         <div class="footer">
             <button type="submit" data-home-target="button" disabled>Submit</button>
-            <a href="/home"><button type="button" data-home-target="button">Start a New Trade</button></a>
+            <a href="/home"><button type="button">Start a New Trade</button></a>
         </div>
     </div>
 </form>
