--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
     <input type="hidden" name="selected-team-1" value="" />
     <input type="hidden" name="selected-team-2" value="" />
     <div id="home">
-        <div class="content">
+        <div class="home-content">
             <div>
                 <div>
                     <p>Select a team:</p>
@@ -16,7 +16,7 @@
                 </div>
             </div>
         </div>
-        <div class="footer">
+        <div class="home-footer">
             <button type="submit" data-home-target="button" disabled>Go To Next Page</button>
         </div>
     </div>
