--- a/app/assets/stylesheets/draft-picks.css
+++ b/app/assets/stylesheets/draft-picks.css
@@ -1,11 +1,12 @@
-#draft-picks, .content, .content > div, .content > div > div,
- .footer {
+#draft-picks, .draft-picks-content, .draft-picks-content > div, .draft-picks-content > div > div,
+ .draft-picks-footer {
     display: flex;
 }
 
 #draft-picks {
     justify-content: center;
     flex-direction: column;
+    align-items: center;
 }
 
 p {
@@ -14,32 +15,27 @@ p {
     font-weight: bold;
 }
 
-.content {
+.draft-picks-content {
     margin-top: 1.5em;
 }
 
-.content > div {
+.draft-picks-content > div {
     justify-content: center;
 }
 
-.content > div > div {
-    flex-direction: column;
-    width: 60%;
-}
-
-.conference {
+.draft-picks-content > div > div {
     flex-direction: column;
 }
 
-
-.footer {
+.draft-picks-footer {
     justify-content: right;
-    width: 90%;
-    margin-top: 2em;
+    width: 35%;
+    margin-top: 4em;
 }
 
-.footer button {
+.draft-picks-footer button {
     font-size: 1em;
+    margin: 0 .2em;
 }
 
 button {
@@ -47,16 +43,16 @@ button {
 }
 
 @media screen and (width <= 1024px) and (height > 600px) {
-    .content {
+    .draft-picks-content {
         flex-direction: column;
         margin-top: 0;
     }
 
-    .content > div {
+    .draft-picks-content > div {
         margin-top: 1em;
     }
 
-    .content > div > div {
+    .draft-picks-content > div > div {
         width: 80%;
     }
 
@@ -64,21 +60,21 @@ button {
         font-size: .75em;
     }
 
-    .footer {
+    .draft-picks-footer {
         margin: 1em 0;
     }
 
-    .footer button {
+    .draft-picks-footer button {
         font-size: .75em;
     }
 }
 
 @media screen and (width < 1024px) and (height < 600px) {
-    .footer {
+    .draft-picks-footer {
         margin: 1em 0;
     }
 
-    .footer button {
+    .draft-picks-footer button {
         font-size: .75em;
     }
 }
