Updated second page

--- a/app/views/draft_picks/show.html.erb
+++ b/app/views/draft_picks/show.html.erb
@@ -7,34 +7,14 @@
                 <div>
                     <p>Select your pick(s):</p>
                     <p><%= @selectedTeam1 %></p>
-                    <div id="checkboxes">
-                        <div>
-                            <input name="checkbox1" type="checkbox" />
-                            <label for="checkbox1">Pick 1</label>
-                        </div>
-                        <div>
-                            <input name="checkbox1" type="checkbox" />
-                            <label for="checkbox1">Pick 33</label>
-                        </div>
-                    </div>
-                    <!--<%= render(TeamLogosContainerComponent.new(teams: getTeams(grid: 1))) %>-->
+                    <%= render(DraftPicksContainerComponent.new(picks: getPicks(team: @selectedTeam1))) %>
                 </div>
             </div>
             <div>
                 <div style="margin-left: 100px;">
                     <p>Select your pick(s):</p>
                     <p><%= @selectedTeam2 %></p>
-                    <div id="checkboxes">
-                        <div>
-                            <input name="checkbox3" type="checkbox" />
-                            <label for="checkbox3">Pick 2</label>
-                        </div>
-                        <div>
-                            <input name="checkbox4" type="checkbox" />
-                            <label for="checkbox4">Pick 34</label>
-                        </div>
-                    </div>
-                    <!--<%= render(TeamLogosContainerComponent.new(teams: getTeams(grid: 2))) %>-->
+                    <%= render(DraftPicksContainerComponent.new(picks: getPicks(team: @selectedTeam2))) %>
                 </div>
             </div>
         </div>
