--- a/app/components/draft_pick_component.html.erb
+++ b/app/components/draft_pick_component.html.erb
@@ -1,4 +1,4 @@
 <div>
-    <input type="checkbox" name=<%= @pick %> value=<%= @value %> />
-    <label for=<%= @pick %>>Pick <%= @pick %></label>
+    <input type="checkbox" name=<%= @number %> value=<%= @value %> />
+    <label for=<%= @number %>>Pick <%= @number %></label>
 </div>
