--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,13 +5,13 @@
         <div class="home-content">
             <div>
                 <div>
-                    <p>Select a team:</p>
+                    <p>Select a Team:</p>
                     <%= render(TeamLogosContainerComponent.new(teams: getTeams(grid: 1))) %>
                 </div>
             </div>
             <div>
                 <div>
-                    <p>Select a team:</p>
+                    <p>Select a Team:</p>
                     <%= render(TeamLogosContainerComponent.new(teams: getTeams(grid: 2))) %>
                 </div>
             </div>
