--- a/app/components/draft_picks_container_component.html.erb
+++ b/app/components/draft_picks_container_component.html.erb
@@ -1,5 +1,5 @@
 <div class="draft-pick-checkboxes">
     <% @picks.each do |pick| %>
-    <%= render(DraftPickComponent.new(pick: pick["pick"], value: pick["value"])) %>
+    <%= render(DraftPickComponent.new(pick: pick)) %>
     <% end %>
 </div>
