--- a/app/views/draft_picks/show.html.erb
+++ b/app/views/draft_picks/show.html.erb
@@ -6,14 +6,14 @@
             <div>
                 <p>Select your pick(s):</p>
                 <p><%= @selectedTeam1 %></p>
-                <%= render(DraftPicksContainerComponent.new(picks: getPicks(team: @selectedTeam1))) %>
+                <%= render(DraftPicksContainerComponent.new(picks: getPicks(team: @selectedTeam1), grid: 1)) %>
             </div>
         </div>
         <div>
             <div style="margin-left: 100px;">
                 <p>Select your pick(s):</p>
                 <p><%= @selectedTeam2 %></p>
-                <%= render(DraftPicksContainerComponent.new(picks: getPicks(team: @selectedTeam2))) %>
+                <%= render(DraftPicksContainerComponent.new(picks: getPicks(team: @selectedTeam2), grid: 2)) %>
             </div>
         </div>
     </div>
