--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -25,7 +25,7 @@
 }
 
 html {
-    height: 100%;
+    min-height: 100%;
     overflow: hidden;
 }
 
@@ -34,6 +34,7 @@ body {
     background-repeat: no-repeat;
     color: #ffffff;
     font-family: 'All-Pro Sans', 'Helvetica', 'Arial', sans-serif;
+    height: 100%;
 }
 
 #header {
@@ -61,10 +62,6 @@ body {
         overflow: scroll;
     }
 
-    body { 
-        background: #12A8E1;
-    }
-
     #header {
         flex-direction: column;
         align-items: center;
@@ -85,10 +82,6 @@ body {
 @media screen and (width < 1024px) and (height < 600px) {
     html {
         overflow: scroll;
-    }
-
-    body { 
-        background: #12A8E1;
     }
 
     #header {
