--- a/app/assets/stylesheets/draft-picks.css
+++ b/app/assets/stylesheets/draft-picks.css
@@ -21,7 +21,7 @@ p {
 
 .draft-picks-content > div {
     justify-content: center;
-    margin: 0 100px;
+    margin: 0 6em;
 }
 
 .draft-picks-content > div > div {
@@ -50,7 +50,7 @@ button {
     }
 
     .draft-picks-content > div {
-        margin-top: 1em;
+        margin-top: 2em;
     }
 
     .draft-picks-content > div > div {
@@ -71,6 +71,10 @@ button {
 }
 
 @media screen and (width < 1024px) and (height < 600px) {
+    .draft-picks-content > div {
+        margin: 1em 4em 0 4em;
+    }
+
     .draft-picks-footer {
         margin: 1em 0;
     }
