Updated checkbox text

--- a/app/components/draft_pick_component.html.erb
+++ b/app/components/draft_pick_component.html.erb
@@ -1,4 +1,4 @@
 <div>
     <input type="checkbox" name=<%= @number %> value=<%= @value %> class="grid-<%= @grid %>" data-action="click->draft-picks#selectPick" />
-    <label for=<%= @number %>>Pick <%= @number %></label>
+    <label for=<%= @number %>><%= @number %></label>
 </div>
