--- a/app/assets/stylesheets/draft-picks.css
+++ b/app/assets/stylesheets/draft-picks.css
@@ -1,40 +1,45 @@
-#draft-picks, .draft-picks-content, .draft-picks-content > div, .draft-picks-content > div > div,
- .draft-picks-footer {
+#draft-picks, #draft-pick-selections, .selection, #draft-picks-buttons,
+#trade-results > div, #draft-pick-totals > div, #gain-loss-percentages > div
+{
     display: flex;
+}
+
+#trade-results {
+    display: none;
+}
+
+#draft-picks, .selection,
+#trade-results, #trade-results > div {
+    flex-direction: column;
 }
 
 #draft-picks {
     justify-content: center;
-    flex-direction: column;
     align-items: center;
 }
 
-p {
+.header {
     text-transform: uppercase;
     font-size: 1.2rem;
     font-weight: bold;
 }
 
-.draft-picks-content {
+#draft-pick-selections {
     margin-top: 1.5em;
 }
 
-.draft-picks-content > div {
+.selection {
     justify-content: center;
     margin: 0 6em;
 }
 
-.draft-picks-content > div > div {
-    flex-direction: column;
-}
-
-.draft-picks-footer {
+#draft-picks-buttons {
     justify-content: right;
     width: 35%;
-    margin-top: 4em;
+    margin-top: 2em;
 }
 
-.draft-picks-footer button {
+#draft-picks-buttons button {
     font-size: 1em;
     margin: 0 .2em;
 }
@@ -44,42 +49,42 @@ button {
 }
 
 @media screen and (width <= 1024px) and (height > 600px) {
-    .draft-picks-content {
+    #draft-pick-selections {
         flex-direction: column;
         margin-top: 0;
     }
 
-    .draft-picks-content > div {
+    .selection {
         margin-top: 2em;
     }
 
-    .draft-picks-content > div > div {
+    .selection > div {
         width: 80%;
     }
 
-    p {
+    .header {
         font-size: .75em;
     }
 
-    .draft-picks-footer {
-        margin: 1em 0;
+    #draft-picks-buttons {
+        margin: .5em 0;
     }
 
-    .draft-picks-footer button {
+    #draft-picks-buttons button {
         font-size: .75em;
     }
 }
 
 @media screen and (width < 1024px) and (height < 600px) {
-    .draft-picks-content > div {
+    .selection {
         margin: 1em 4em 0 4em;
     }
 
-    .draft-picks-footer {
-        margin: 1em 0;
+    #draft-picks-buttons {
+        margin: .5em 0;
     }
 
-    .draft-picks-footer button {
+    #draft-picks-buttons button {
         font-size: .75em;
     }
 }
